pqrs/IaC/elk/opensearch-analytics/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-analytics
  labels:
    app.kubernetes.io/part-of: elk-metrics
spec:
  type: ClusterIP
  selector:
    app: opensearch-analytics
  ports:
    - name: https
      port: 9200
      targetPort: 9200
    - name: transport
      port: 9300
      targetPort: 9300
