pqrs/IaC/elk/opensearch-analytics/09-service-dashboards.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards-analytics
  labels:
    app.kubernetes.io/part-of: elk-metrics
spec:
  type: ClusterIP
  selector:
    app: opensearch-dashboards-analytics
  ports:
    - name: dashboards
      port: 5601
      targetPort: 5601
