pqrs/IaC/elk/opensearch-analytics/10-route-dashboards.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: opensearch-dashboards-analytics
  labels:
    app.kubernetes.io/part-of: elk-metrics
spec:
  to:
    kind: Service
    name: opensearch-dashboards-analytics
  port:
    targetPort: dashboards
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
